--- a/nginx.conf
+++ b/nginx.conf
@@ -1,14 +1,9 @@
 server {
-    listen 8080;
+    listen $PORT;
     server_name _;
     root /var/www/html/public;
 
-    add_header X-Frame-Options "SAMEORIGIN";
-    add_header X-XSS-Protection "1; mode=block";
-    add_header X-Content-Type-Options "nosniff";
-
     index index.php;
-
     charset utf-8;
 
     location / {
@@ -21,7 +16,7 @@ server {
     error_page 404 /index.php;
 
     location ~ \.php$ {
-        fastcgi_pass 127.0.0.1:8000;
+        fastcgi_pass 127.0.0.1:9000;
         fastcgi_param SCRIPT_FILENAME $realpath_root$fastcgi_script_name;
         include fastcgi_params;
     }
